fix: Product Minor changes